Fix low contrast text (#39)

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -90,7 +90,7 @@
 #copyright
     float: right
     font-size: 0.9em
-    color: $gray-strong
+    color: #555
 
 
 /** 404 **/
